# reproduce-gpt2

./: .gitignore  README.md  pyproject.toml
configs/: debug_small.py  gpt2_124m.py
gpt2/: __init__.py  data.py  model.py  tokenizer.py  utils.py
notebooks/: CausalSelfAttention.ipynb  colab_train.ipynb  gpt2_fromhf.ipynb  mygpt2_usehfweights.ipynb
scripts/: finetune.py  prepare_data.py  sample.py  train.py
tests/: test_hf_parity.py
